--- a/Chp_03.ipynb
+++ b/Chp_03.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "$$Pr(vampire|positive) = \\frac{Pr(positive|vampire) Pr(vampire)} {Pr(positive)}$$\n",
     "\n",
-    "$$Pr(positive) = Pr(positive|vampire) Pr(vampire) + Pr(positive|mortal) 1 − Pr(vampire)$$"
+    "$$Pr(positive) = Pr(positive|vampire) Pr(vampire) + Pr(positive|mortal) (1 − Pr(vampire))$$"
    ]
   },
   {
